# carrot-vision-rs

./: .gitignore  Cargo.toml  README.md
binarized_image_object_detection/: Cargo.toml  README.md
binarized_image_object_detection/examples/: binarized_image_object_detection.rs
binarized_image_object_detection/src/: binarized_image_object_detection.rs  lib.rs  moment_detection.rs
binarized_object_detection/: README.md
binarized_object_detection/src/: binarized_object_detection.rs  lib.rs  moment_detection.rs
carrot_image_utils/: Cargo.toml  README.md
carrot_image_utils/src/: geometry.rs  gray_image.rs  lib.rs  rgb_image.rs
carrot_image_utils/src/geometry/: point.rs  rect.rs
carrot_image_utils/src/rgb_image/: concat.rs  convert.rs  draw.rs  file.rs  rgb_threshold.rs
docs/: design_document.md
examples/: threshold_tracking.rs
object_detection/: Cargo.toml
object_detection/examples/: threshold_tracking.rs
object_detection/src/object_detection/: threshold_detection.rs
object_detection_2d/: Cargo.toml
object_detection_2d/src/: object_detection.rs
src/: lib.rs  main.rs  object_detection.rs  riprs_cv_lib.rs
src/object_detection/: rgb_threshold.rs  self_window.rs  threshold_detection.rs  threshold_moment_detection.rs
src/riprs_cv_lib/: convertor.rs  cv_util.rs  debug.rs  file.rs  image.rs  interface.rs  logger.rs
src/riprs_cv_lib/convertor/: gray_convertor.rs  gray_to_binary.rs  gray_to_rgb.rs  rgb_convertor.rs  rgb_to_binary.rs  rgb_to_gray.rs  visualize_rgb_threshold.rs
src/riprs_cv_lib/image/: gray_image.rs  rgb_image.rs
