[package]
name = "realtime_cv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = "0.4.0"
simplelog = "0.10.0"
image = "0.23.14"
imageproc = "0.22.0"
realtime_cv_lib = { path = "../realtime-cv-lib-rs" }
