[package]
name = "carrot_image_utils"
version = "0.1.8"
description = "Utils library for Image processing"
edition = "2021"
keywords = ["image", "vision"]
authors = ["scepter914 <scepter914@gmail.com>"]
repository = "https://github.com/scepter914/carrot-vision-rs"
documentation = "https://docs.rs/carrot_image_utils"
license = "MIT"
readme = "README.md"
exclude = ["data/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
imageproc = "0.23.0"
num = "0.4"
