[package]
name = "object_detection"
version = "0.1.0"
description = "Object detection for image"
keywords = ["image", "vision", "real-time"]
authors = ["scepter914 <scepter914@gmail.com>"]
repository = "https://github.com/scepter914/object-detection-rs"
# documentation = "https://docs.rs/object_detection"
license = "MIT"
readme = "README.md"
edition = "2021"
publish = false
exclude = ["data/*"]

[dependencies]
chrono = "0.4"
log = "0.4.0"
simplelog = "0.10.0"
image = "0.23.14"
imageproc = "0.22.0"
carrot_utils = { path = "../../carrot-utils-rs/carrot_utils" }
carrot_image_utils = { path = "../../carrot-utils-rs/carrot_image_utils" }
